fixed overlapping titles

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   display: flex;
   width: 100%;
   justify-content: center;
-  padding: 80px 5vw;
+  padding: 20px 5vw;
   box-sizing: border-box;
 
   font-size: 2em;
