--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,14 +11,13 @@ body {
   background-color: $bg-color;
 }
 .main-container {
-  padding: 0 6.597vw;
+  padding: 15vh 6.597vw;
   z-index: 99;
 }
 
 .title-container {
   position: relative;
   display: block;
-  padding-top: 37.77vh;
   padding-top: calc(var(5.6px, 1vh) * 37.77);
   padding-bottom: 10vh;
   padding-bottom: calc(var(5.6px, 1vh) * 10);
